# summarix

./: .gitattributes  LICENSE  README.md
client/: index.html  motion.js  script.js  style.css
context/: .gitignore  main.py
server/: .env  Cargo.toml
server/services/context/: .gitignore  main.py  requirements.txt
server/services/transcript/: flow_manager.py  requirements.txt
server/src/: main.rs  micro_services.rs  routes.rs  states.rs
server/src/routes/: process.rs  structs.rs
transcript/: .gitignore  flow_manager.py  main.py
