[package]
name = "summarix"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["query", "ws"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
